feat(melon): add DICOM and PyVista IO modules with structured data handling
- Introduces new modules for DICOM and PyVista data loading and saving
- Adds structured data handling for DICOM metadata and datasets
- Implements type-safe data exchange and conversion utilities
- Updates dependencies to support new functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "fast-simplification>=0.1.9,<0.2",
   "jaxtyping>=0.2.37,<0.3",
   "lazy-loader>=0.4,<0.5",
+  "liblaf-grapes>=0.0.2,<0.0.3",
   "loguru>=0.7.3,<0.8",
   "matplotlib>=3.10.0,<4",
   "meshio>=5.3.5,<6",
@@ -26,6 +27,7 @@ dependencies = [
   "polars>=1.21.0,<2",
   "pooch>=1.8.2,<2",
   "pyacvd>=0.3.1,<0.4",
+  "pydantic>=2.10.6,<3",
   "pydicom>=3.0.1,<4",
   "pymeshfix>=0.17.0,<0.18",
   "pytetwild>=0.1.dev1,<0.2",
