refactor: rename `Patient` to `Subject` and simplify DICOM dataset structure
- Renames `Patient` to `Subject` for more inclusive terminology
- Removes `AttachmentsMeta` and simplifies attachment handling
- Streamlines acquisition and subject management in DICOM dataset
- Updates type hints and metadata handling for better type safety

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
   "fast-simplification>=0.1.9,<0.2",
   "jaxtyping>=0.2.37,<0.3",
   "lazy-loader>=0.4,<0.5",
-  "liblaf-grapes>=0.0.2,<0.0.3",
+  "liblaf-grapes>=0.0.3,<0.0.4",
   "loguru>=0.7.3,<0.8",
   "matplotlib>=3.10.0,<4",
   "meshio>=5.3.5,<6",
@@ -60,7 +60,7 @@ packages = ["src/liblaf"]
 
 [tool.pixi.dependencies]
 jax = ">=0.4.35,<0.5"
-jaxlib = { build = "*cuda*" }
+jaxlib = { build = "*cuda*", version = ">=0.4.35,<0.5" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
