--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/microsoft/pyright/main/packages/vscode-pyright/schemas/pyrightconfig.schema.json",
-  "extends": ".github/linters/pyrightconfig.json"
+  "extends": ".github/linters/pyrightconfig.json",
+  "extraPaths": ["src"],
+  "verboseOutput": true
 }
