feat: enhance correspondence and transfer operations with new algorithms and transformations
- Adds new classes for nearest point and vertex operations with prepared states
- Implements transformation utilities including concat_transforms
- Introduces new transfer algorithms with improved handling of data types
- Refactors registration and transfer operations for better modularity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ packages = ["src/liblaf"]
 
 [tool.pixi.dependencies]
 jax = ">=0.4.35,<0.5"
-jaxlib = { build = "*cuda*", version = ">=0.4.35,<0.5" }
+jaxlib = { build = "*cuda*" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
