--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,19 @@ requires = ["hatchling"]
 [dependency-groups]
 build = ["pyinstaller>=6.11.1,<7"]
 dev = ["icecream>=2.1.4,<3"]
+docs = [
+  "mdx-truly-sane-lists>=1.3,<2",
+  "mkdocs-gen-files>=0.5.0,<0.6",
+  "mkdocs-git-committers-plugin-2>=2.5.0,<3",
+  "mkdocs-git-revision-date-localized-plugin>=1.3.0,<2",
+  "mkdocs-literate-nav>=0.6.1,<0.7",
+  "mkdocs-material[imaging]>=9.6.2,<10",
+  "mkdocs-section-index>=0.3.9,<0.4",
+  "mkdocs>=1.6.1,<2",
+  "mkdocstrings[python]>=0.28.0,<0.29",
+  "pymdown-extensions>=10.14.3,<11",
+  "ruff>=0.9.4,<0.10", "mkdocs-autorefs>=1.3.0,<2",
+]
 
 [project]
 authors = [
@@ -65,7 +78,7 @@ jaxlib = { build = "*cuda*" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
-default = ["build", "dev"]
+default = ["build", "dev", "docs"]
 
 [tool.pixi.project]
 channel-priority = "disabled"
