--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ build = ["pyinstaller>=6.11.1,<7"]
 dev = ["icecream>=2.1.4,<3"]
 docs = [
   "mdx-truly-sane-lists>=1.3,<2",
+  "mkdocs-autorefs>=1.3.0,<2",
   "mkdocs-gen-files>=0.5.0,<0.6",
   "mkdocs-git-committers-plugin-2>=2.5.0,<3",
   "mkdocs-git-revision-date-localized-plugin>=1.3.0,<2",
@@ -19,8 +20,9 @@ docs = [
   "mkdocs>=1.6.1,<2",
   "mkdocstrings[python]>=0.28.0,<0.29",
   "pymdown-extensions>=10.14.3,<11",
-  "ruff>=0.9.4,<0.10", "mkdocs-autorefs>=1.3.0,<2",
+  "ruff>=0.9.4,<0.10",
 ]
+exp = ["typer>=0.15.1,<0.16"]
 
 [project]
 authors = [
@@ -74,11 +76,11 @@ packages = ["src/liblaf"]
 
 [tool.pixi.dependencies]
 jax = ">=0.4.35,<0.5"
-jaxlib = { build = "*cuda*" }
+jaxlib = { build = "*cuda*", version = ">=0.4.35,<0.5" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
-default = ["build", "dev", "docs"]
+default = ["build", "dev", "docs", "exp"]
 
 [tool.pixi.project]
 channel-priority = "disabled"
