--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,9 @@ python = ">=3.12,<3.13"
 [tool.pixi.environments]
 default = ["build", "dev", "docs", "exp"]
 
+[tool.pixi.feature.exp.dependencies]
+pytorch-gpu = ">=2.5.1,<3"
+
 [tool.pixi.project]
 channel-priority = "disabled"
 channels = ["conda-forge"]
