--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,21 @@ build = ["pyinstaller>=6.11.1,<7"]
 dev = ["icecream>=2.1.4,<3"]
 docs = [
   "mdx-truly-sane-lists>=1.3,<2",
-  "mkdocs-autorefs>=1.3.0,<2",
+  "mkdocs-autorefs>=1.3.1,<2",
   "mkdocs-gen-files>=0.5.0,<0.6",
   "mkdocs-git-committers-plugin-2>=2.5.0,<3",
   "mkdocs-git-revision-date-localized-plugin>=1.3.0,<2",
   "mkdocs-literate-nav>=0.6.1,<0.7",
-  "mkdocs-material[imaging]>=9.6.2,<10",
+  "mkdocs-material[imaging]>=9.6.4,<10",
   "mkdocs-section-index>=0.3.9,<0.4",
   "mkdocs>=1.6.1,<2",
-  "mkdocstrings[python]>=0.28.0,<0.29",
+  "mkdocstrings-python>=1.15.0,<2",
+  "mkdocstrings>=0.28.0,<0.29",
   "pymdown-extensions>=10.14.3,<11",
   "ruff>=0.9.4,<0.10",
 ]
 exp = ["typer>=0.15.1,<0.16"]
+test = ["pytest>=8.3.4,<9"]
 
 [project]
 authors = [
@@ -32,15 +34,16 @@ classifiers = []
 dependencies = [
   "attrs>=25.1.0,<26",
   "fast-simplification>=0.1.9,<0.2",
-  "jaxtyping>=0.2.37,<0.3",
+  "glom>=24.11.0,<25",
+  "jaxtyping>=0.2.38,<0.3",
   "lazy-loader>=0.4,<0.5",
-  "liblaf-grapes>=0.0.4,<0.0.5",
+  "liblaf-grapes>=0.0.5,<0.0.6",
   "loguru>=0.7.3,<0.8",
   "matplotlib>=3.10.0,<4",
   "meshio>=5.3.5,<6",
   "numpy",
   "pandas>=2.2.3,<3",
-  "polars>=1.21.0,<2",
+  "polars>=1.22.0,<2",
   "pooch>=1.8.2,<2",
   "pyacvd>=0.3.1,<0.4",
   "pydantic>=2.10.6,<3",
@@ -51,7 +54,7 @@ dependencies = [
   "rich>=13.9.4,<14",
   "scipy",
   "seaborn>=0.13.2,<0.14",
-  "trimesh>=4.6.1,<5",
+  "trimesh>=4.6.2,<5",
 ]
 description = "Add your description here"
 keywords = []
@@ -80,7 +83,7 @@ jaxlib = { build = "*cuda*", version = ">=0.4.35,<0.5" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
-default = ["build", "dev", "docs", "exp"]
+default = ["build", "dev", "docs", "exp", "test"]
 
 [tool.pixi.feature.exp.dependencies]
 pytorch-gpu = ">=2.5.1,<3"
