--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,15 @@
 
 [build-system]
 build-backend = "hatchling.build"
-requires = ["hatchling"]
+requires = ["hatch-vcs", "hatchling"]
 
 [dependency-groups]
-build = ["pyinstaller>=6.11.1,<7"]
+build = [
+  "check-wheel-contents>=0.6.1,<0.7",
+  "hatch>=1.14.0,<2",
+  "pyinstaller>=6.11.1,<7",
+  "twine>=6.1.0,<7",
+]
 dev = ["icecream>=2.1.4,<3"]
 docs = [
   "mdx-truly-sane-lists>=1.3,<2",
@@ -30,7 +35,10 @@ test = ["pytest>=8.3.4,<9"]
 authors = [
   { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
 ]
-classifiers = []
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "License :: OSI Approved :: MIT License",
+]
 dependencies = [
   "attrs>=25.1.0,<26",
   "fast-simplification>=0.1.9,<0.2",
@@ -57,12 +65,12 @@ dependencies = [
   "trimesh>=4.6.2,<5",
 ]
 description = "Add your description here"
+dynamic = ["version"]
 keywords = []
 license = "MIT"
 name = "liblaf-melon"
 readme = "docs/README.md"
 requires-python = ">=3.12"
-version = "0.1.0"
 
 [project.urls]
 "Changelog" = "https://github.com/liblaf/melon/blob/main/CHANGELOG.md"
@@ -74,8 +82,14 @@ version = "0.1.0"
 [tool.check-wheel-contents]
 ignore = ["W002"]
 
+[tool.hatch.build.targets.sdist]
+only-packages = true
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/liblaf"]
+
+[tool.hatch.version]
+source = "vcs"
 
 [tool.pixi.dependencies]
 jax = ">=0.4.35,<0.5"
@@ -83,7 +97,7 @@ jaxlib = { build = "*cuda*", version = ">=0.4.35,<0.5" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
-default = ["build", "dev", "docs", "exp", "test"]
+default = { features = ["build", "dev", "docs", "exp", "test"] }
 
 [tool.pixi.feature.exp.dependencies]
 pytorch-gpu = ">=2.5.1,<3"
