--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build = [
   "pyinstaller>=6.11.1,<7",
   "twine>=6.1.0,<7",
 ]
-dev = ["icecream>=2.1.4,<3"]
+dev = ["icecream>=2.1.4,<3", "tqdm>=4.67.1,<5", "typer>=0.15.1,<0.16"]
 docs = [
   "mdx-truly-sane-lists>=1.3,<2",
   "mkdocs-autorefs>=1.3.1,<2",
@@ -28,7 +28,6 @@ docs = [
   "pymdown-extensions>=10.14.3,<11",
   "ruff>=0.9.4,<0.10",
 ]
-exp = ["typer>=0.15.1,<0.16"]
 test = ["pytest>=8.3.4,<9"]
 
 [project]
@@ -45,13 +44,13 @@ dependencies = [
   "glom>=24.11.0,<25",
   "jaxtyping>=0.2.38,<0.3",
   "lazy-loader>=0.4,<0.5",
-  "liblaf-grapes>=0.1.0,<0.2",
+  "liblaf-grapes>=0.1.3,<0.2",
   "loguru>=0.7.3,<0.8",
-  "matplotlib>=3.10.0,<4",
+  "matplotlib>=3.10.1,<4",
   "meshio>=5.3.5,<6",
   "numpy",
   "pandas>=2.2.3,<3",
-  "polars>=1.22.0,<2",
+  "polars>=1.24.0,<2",
   "pooch>=1.8.2,<2",
   "pyacvd>=0.3.1,<0.4",
   "pydantic>=2.10.6,<3",
@@ -62,7 +61,7 @@ dependencies = [
   "rich>=13.9.4,<14",
   "scipy",
   "seaborn>=0.13.2,<0.14",
-  "trimesh>=4.6.2,<5",
+  "trimesh>=4.6.4,<5",
 ]
 description = "Add your description here"
 dynamic = ["version"]
@@ -93,14 +92,14 @@ packages = ["src/liblaf"]
 source = "vcs"
 
 [tool.pixi.dependencies]
-jax = ">=0.4.35,<0.5"
-jaxlib = { build = "*cuda*", version = ">=0.4.35,<0.5" }
+jax = ">=0.5.2,<0.6"
+jaxlib = { build = "*cuda*", version = ">=0.5.2,<0.6" }
 python = ">=3.12,<3.13"
 
 [tool.pixi.environments]
-default = { features = ["build", "dev", "docs", "exp", "test"] }
+default = { features = ["build", "dev", "docs", "test"] }
 
-[tool.pixi.feature.exp.dependencies]
+[tool.pixi.feature.dev.dependencies]
 pytorch-gpu = ">=2.5.1,<3"
 
 [tool.pixi.project]
